# wikipulse-service

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: alerts.py  issues.py  users.py  websocket.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/schemas/: __init__.py
backend/app/services/: kafka_consumer.py  lambda_trigger.py  redis_client.py
backend/tests/: conftest.py  test_issues.py  test_users.py  test_websocket.py
docs/: api-schema.md  architecture.md  decisions.md  ideas.md  page-structure.md  sprint.md  study.md  troubleshooting.md
frontend/: .env.example  jest.config.js  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/: IssueList.test.tsx  useWebSocket.test.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/issues/: page.tsx
frontend/app/issues/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/settings/: layout.tsx
frontend/app/settings/account/: page.tsx
frontend/app/settings/alerts/: page.tsx
frontend/components/: BriefingCard.tsx  CommentFeed.tsx  Header.tsx  IssueList.tsx  IssueTimeline.tsx  SentimentChart.tsx  SettingsNav.tsx  SpikeChart.tsx  SystemBanner.tsx
frontend/hooks/: useHealth.ts  useWebSocket.ts
frontend/lib/: api.ts  auth.ts
mock/: alerts.json  briefings.json  comments.json  sentiment-results.json  timeline.json
(+3 files in other folders)
